Pass platform url, token and ca bundle to ui-server
